force-app/main/default/objects/RW_Referral__c/RW_Referral__c.object-meta.xml
<CustomObject>
    <label>Referral</label>
    <nameField>
        <displayFormat>RL- {00000}</displayFormat>
        <label>Referral Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referral</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>