force-app/main/default/objects/RW_Referral__c/fields/Duplicate_Lead_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Lead_Mobile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Duplicate Lead (Mobile)</label>
    <type>Checkbox</type>
</CustomField>