force-app/main/default/objects/RW_Referral__c/fields/RW_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>RW_Contact_Phone__c</fullName>
    <label>Contact Phone</label>
    <type>Phone</type>
</CustomField>