force-app/main/default/objects/RW_Referral__c/fields/RW_Duplicate_Lead__c.field-meta.xml
<CustomField>
    <fullName>RW_Duplicate_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Duplicate Lead (Mobile &amp; Project)</label>
    <type>Checkbox</type>
</CustomField>