force-app/main/default/objects/RW_Referral__c/fields/RW_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>RW_Email_Address__c</fullName>
    <label>Email Address</label>
    <required>true</required>
    <type>Email</type>
</CustomField>