force-app/main/default/objects/RW_Referral__c/fields/RW_Employee_Reference__c.field-meta.xml
<CustomField>
    <fullName>RW_Employee_Reference__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Employee Reference</label>
    <type>Checkbox</type>
</CustomField>