force-app/main/default/objects/RW_Referral__c/fields/RW_First_Name__c.field-meta.xml
<CustomField>
    <fullName>RW_First_Name__c</fullName>
    <label>First Name</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>