force-app/main/default/objects/RW_Referral__c/fields/RW_How_do_you_know_this_person__c.field-meta.xml
<CustomField>
    <fullName>RW_How_do_you_know_this_person__c</fullName>
    <label>How do you know this person?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>