force-app/main/default/objects/RW_Referral__c/fields/RW_LeadCreated__c.field-meta.xml
<CustomField>
    <fullName>RW_LeadCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LeadCreated</label>
    <type>Checkbox</type>
</CustomField>