force-app/main/default/objects/RW_Referral__c/fields/RW_Mode__c.field-meta.xml
<CustomField>
    <fullName>RW_Mode__c</fullName>
    <label>Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer portal</fullName>
            </value>
            <value>
                <fullName>Regular</fullName>
                <default>true</default>
                <label>Regular</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>