force-app/main/default/objects/RW_Referral__c/fields/RW_Project__c.field-meta.xml
<CustomField>
    <fullName>RW_Project__c</fullName>
    <label>Project</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Runwal Bliss</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>