force-app/main/default/objects/RW_Referral__c/fields/RW_Referral_Id__c.field-meta.xml
<CustomField>
    <fullName>RW_Referral_Id__c</fullName>
    <externalId>true</externalId>
    <label>Referral Id</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>