force-app/main/default/objects/RW_Referral__c/fields/RW_Referral_Lead_Check__c.field-meta.xml
<CustomField>
    <fullName>RW_Referral_Lead_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Referral Lead Check</label>
    <type>Checkbox</type>
</CustomField>