force-app/main/default/objects/RW_Referral__c/fields/RW_Referral_Processed__c.field-meta.xml
<CustomField>
    <fullName>RW_Referral_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Referral Processed</label>
    <type>Checkbox</type>
</CustomField>