force-app/main/default/objects/RW_Referral__c/fields/RW_Status__c.field-meta.xml
<CustomField>
    <fullName>RW_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Junk Enquiries</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Not Sure</fullName>
            </value>
            <value>
                <fullName>VCVP</fullName>
            </value>
            <value>
                <fullName>Visit Done</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Unit Booked</fullName>
            </value>
            <value>
                <fullName>In Process</fullName>
                <default>true</default>
                <label>In Process</label>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>