force-app/main/default/objects/RW_Referral__c/listViews/All_view_new_new.listView-meta.xml
<ListView>
    <fullName>All_view_new_new</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>RW_Contact_Phone__c</columns>
    <columns>RW_Referral_Processed__c</columns>
    <columns>RW_LeadCreated__c</columns>
    <columns>RW_Duplicate_Lead__c</columns>
    <columns>Duplicate_Lead_Mobile__c</columns>
    <columns>RW_Last_Name__c</columns>
    <columns>RW_Project__c</columns>
    <columns>RW_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RW_LeadCreated__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Unconverted referrals</label>
</ListView>