force-app/main/default/objects/RW_Referral__c/listViews/My_View_new.listView-meta.xml
<ListView>
    <fullName>My_View_new</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>RW_Contact_Phone__c</columns>
    <columns>RW_Referral_Processed__c</columns>
    <columns>RW_LeadCreated__c</columns>
    <columns>RW_Duplicate_Lead__c</columns>
    <columns>Duplicate_Lead_Mobile__c</columns>
    <columns>RW_Last_Name__c</columns>
    <columns>RW_Project__c</columns>
    <columns>RW_Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>My View</label>
</ListView>